[workspace]
members = [
    "crates/libs/turtle",
    "crates/examples/app"
]

[workspace.package]
name = "turtle"
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
ash = "0.38.0"
ash-window = "0.13.0"
log = "0.4.28"
pretty_env_logger = "0.5.0"
winit = {version = "0.30.12", features = ["rwh_05"]}
